(fix) Modify to prevent overflow into chat.

--- a/public/styles/styles/_chat.scss
+++ b/public/styles/styles/_chat.scss
@@ -41,7 +41,7 @@ div.chat-section {
 
   .message-section {
     padding: 5px 10px;
-    height: inherit;
+    height: 70%;
 
     .message-list {
       height: 190px;
